automatically backed up by learn

--- a/views/reversed.erb
+++ b/views/reversed.erb
@@ -11,5 +11,9 @@
 
     <!--   Use ERB tags to bring in an instance variable containing the reversed string -->
 
+    <form method="POST" action="/reversed">
+      <!-- <input type="text" name="string"> -->
+      <!-- <input type="submit"> -->
+    </form>
   </body>
 </html>
