--- a/views/reversed.erb
+++ b/views/reversed.erb
@@ -10,10 +10,6 @@
     <h1>The Ultimate Reversed String!</h1>
 
     <!--   Use ERB tags to bring in an instance variable containing the reversed string -->
-
-    <form method="POST" action="/reversed">
-      <!-- <input type="text" name="string"> -->
-      <!-- <input type="submit"> -->
-    </form>
+    <h2><%= @rev_string %></h2>
   </body>
 </html>
